traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:12: error: too many arguments for method bougerPos: ()Unit
         bougerPos(cpt)
                  ^TraversalZigZag:17: error: not found: value bougeinverse
          bougeinverse()
          ^TraversalZigZag:23: error: too many arguments for method bougerPos: ()Unit
        bougerPos(cpt)
                 ^